# selenium-flask-python-docker

./: .env.build.example  .env.example  .gitignore  CLAUDE.md  INTEGRATION_TEST_FIX.md  NETWORK-DEPLOYMENT.md  PROXY-CONFIG.md  README.md  TESTING.md  TEST_REORGANIZATION_SUMMARY.md  WINDOWS.md  build-with-proxy.bat  build-with-proxy.sh  docker-compose.yaml
.claude/: settings.local.json
backend/: .coveragerc  Dockerfile  README.md  app.py  init.sql  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
backend/scripts/: build_and_install_test.bat  build_and_install_test.sh  cleanup_coverage.bat  cleanup_coverage.sh  development_tools_test.bat  development_tools_test.sh  docker_integration_test.bat  docker_integration_test.sh  package_validation.bat  package_validation.sh  version_consistency_test.bat  version_consistency_test.sh
backend/src/todo_api/: __init__.py  app.py  cli.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: api_interceptor.js  config.js  index.html
frontend/src/: App.css  App.js  App.tsx
frontend/src/types/: todo.ts
test_reports/: unit_report.html
tests/: .env.integration  .env.unit  Dockerfile  QUICKSTART.md  config.py  conftest.py  pytest.ini  rebuild_run_tests.bat  requirements.txt  run_integration_tests.bat  run_integration_tests.sh  run_unit_tests.bat  run_unit_tests.ps1  test_capture_network_error.py  test_create_todo_diagnosis.py  test_debug_console.py  test_debug_interceptor.py  test_instrument_react.py  test_integration_diagnosis.py  test_interceptor_quick.py  test_manual_trigger.py  test_network_diagnosis.py  test_react_state_check.py  test_todo_crud.py
tests/.archived/: README.md  rebuild_run_tests.bat  test_api_url_at_runtime.py  test_axios_directly.py  test_check_api_url.py  test_check_axios_error.py  test_check_axios_loaded.py  test_check_react_state.py  test_check_scripts_loaded.py  test_check_storage.py  test_debug_console.py  test_debug_create_todo.py  test_debug_interceptor.py  test_integration_diagnosis.py  test_interceptor_quick.py  test_manual_trigger.py  test_verify_api_url.py  test_xhr_works.py
tests/mocks/: __init__.py  api_interceptor.js  api_url_override.js
tests/pages/: __init__.py  todo_page.py
tests/scripts/: README.md  run_all_tests.bat  run_all_tests.sh  run_integration_tests.bat  run_integration_tests.ps1  run_integration_tests.sh  run_unit_tests.bat  run_unit_tests.ps1  run_unit_tests.sh
tests/test_reports/: integration_report.html  unit_report.html
